--- a/cascade_web_services/templates/admin.html
+++ b/cascade_web_services/templates/admin.html
@@ -27,6 +27,9 @@
             {% elif field.type == "SelectField" %}
               {{ field.label }} {{ field }}
 
+            {% elif field.type == "CKEditorTextAreaField" %}
+              {{ field.label }} {{ field(class="ckeditor") }}
+
             {% elif field.type == "DateTimeField" %}
               {# do the entire date field in here for now #}
               {{ datetime_fieldset() }}
