--- a/cascade_web_services/templates/admin.html
+++ b/cascade_web_services/templates/admin.html
@@ -18,33 +18,53 @@
   <div class="large-12 columns">
     <form id="eventform" action="/submit" method="post">
         {{ form.hidden_tag() }}
-
         {% for field in form if field.widget.input_type != 'hidden' %}
 
-            {% if field.type == "SelectMultipleField" %}
-              {{ field.label }} {{ field(size=10, class="largeselect") }}
 
-            {% elif field.type == "SelectField" %}
-              {{ field.label }} {{ field }}
-
-            {% elif field.type == "CKEditorTextAreaField" %}
-              {{ field.label }} {{ field(class="ckeditor") }}
-
-            {% elif field.type == "DateTimeField" %}
-              {# do the entire date field in here for now #}
-              {{ datetime_fieldset() }}
-
-            {% elif field.name == "off_location" %}
-              <div id="off_location_wrap" style="display:none;">
-                {{ field.label }} {{ field }}
+        {# Print any errors for this field#}
+          {% for error in form.errors[field.name] %}
+            <div class="alert alert-error">
+              <div data-alert class="alert-box alert radius">
+                {{ error }}
+                <a href="#" class="close">&times;</a>
               </div>
+            </div>
+          {% endfor %}
 
-            {% else %}
-                {{ field.label }} {{ field(size=20) }}
-            {% endif %}
+          {# print the label #}
+          {% if field.name != "off_location" %}
+            <label for="{{ field.name }}">
+              {{ field.label.text }}
+              {% if field.flags.required %} <small>required</small> {% endif %}
+             </label>
+          {% endif %}
+
+
+          {# Print the field #}
+          {% if field.type == "SelectMultipleField" %}
+            {{ field(size=10, class="largeselect") }}
+
+          {% elif field.type == "SelectField" %}
+            {{ field }}
+
+          {% elif field.type == "CKEditorTextAreaField" %}
+            {{ field(class="ckeditor") }}
+
+          {% elif field.type == "DateTimeField" %}
+            {# do the entire date field in here for now #}
+            {{ datetime_fieldset() }}
+
+          {% elif field.name == "off_location" %}
+            <div id="off_location_wrap" style="display:none;">
+              {{ field.label }}{{ field }}
+            </div>
+
+          {% else %}
+              {{ field(size=20) }}
+          {% endif %}
 
         {% endfor %}
-        <button type="submit" class="button postfix">Submit</button>
+        <button type="submit" id="event-submit-btn" class="button postfix">Submit</button>
     </form>
   </div>
 </div>
