--- a/cascade_web_services/templates/admin.html
+++ b/cascade_web_services/templates/admin.html
@@ -8,7 +8,6 @@
       height: 100px;
       font-size:14px;
     }
-
   </style>
 {% endblock %}
 
@@ -19,7 +18,6 @@
     <form id="eventform" action="/submit" method="post">
         {{ form.hidden_tag() }}
         {% for field in form if field.widget.input_type != 'hidden' %}
-
 
         {# Print any errors for this field#}
           {% for error in form.errors[field.name] %}
@@ -39,10 +37,12 @@
              </label>
           {% endif %}
 
-
           {# Print the field #}
           {% if field.type == "SelectMultipleField" %}
             {{ field(size=10, class="largeselect") }}
+
+          {% elif field.type == "HeadingField" %}
+            <h3>{{ field.label }}</h3>
 
           {% elif field.type == "SelectField" %}
             {{ field }}
