--- a/cascade_web_services/templates/admin_base.html
+++ b/cascade_web_services/templates/admin_base.html
@@ -9,8 +9,8 @@
             <div class="large-12 columns">
               <div class="nav-bar right">
                <ul class="button-group">
-                 <li><a href="#" class="button">Link 1</a></li>
-                 <li><a href="#" class="button">Link 2</a></li>
+                 <li><a href="/" class="button">Home</a></li>
+                 <li><a href="/add" class="button">Add New Event</a></li>
                  <li><a href="#" class="button">Link 3</a></li>
                  <li><a href="#" class="button">Link 4</a></li>
                 </ul>
