--- a/cascade_web_services/templates/home.html
+++ b/cascade_web_services/templates/home.html
@@ -23,7 +23,7 @@
       <div class="large-4 columns small-3">
         <ul class="button-group">
           <li><a href="#" class="small button">Edit</a></li>
-          <li><a href="#" class="small button alert">Delete</a></li>
+          <li><a href="/delete/{{ form.id }}" class="small button alert">Delete</a></li>
          </ul>
       </div>
       <hr/>
