--- a/cascade_web_services/templates/admin.html
+++ b/cascade_web_services/templates/admin.html
@@ -11,7 +11,9 @@
   </style>
 {% endblock %}
 
-{% block formsdropdown %}
+{% block page_title %} Add a new event {% endblock %}
+
+{% block main_content %}
 
 <div class="row">
   <div class="large-12 columns">
