--- a/cascade_web_services/templates/home.html
+++ b/cascade_web_services/templates/home.html
@@ -8,20 +8,25 @@
   </style>
 {% endblock %}
 
-{% block formsdropdown %}
+{% block page_title %}Tinker{% endblock %}
+
+{% block main_content %}
 
 <div class="row">
   <div class="large-12 columns">
 
    {% for form in forms%}
     <div class="row">
-      <div class="large-8 columns">
+      <div class="large-7 columns">
         <p>
           <a href={{ form.path }}>{{ form.title }}</a>
+          <br/>
+          <small><a href={{ form.path }}>{{ form.path }}</a></small>
         </p>
       </div>
-      <div class="large-4 columns small-3">
+      <div class="large-5 columns small-3">
         <ul class="button-group">
+          <li><a href="{{ form.path }}" class="small button success">View</a></li>
           <li><a href="#" class="small button">Edit</a></li>
           <li><a href="/delete/{{ form.id }}" class="small button alert">Delete</a></li>
          </ul>
