--- a/tinker/templates/event-form.html
+++ b/tinker/templates/event-form.html
@@ -17,7 +17,13 @@
 
 <div class="row">
   <div class="large-12 columns">
-    <form id="eventform" action="/submit" method="post">
+    {% if add_form %}
+      <form id="eventform" action="/submit" method="post">
+    {% else %}
+      <form id="eventform" action="/submit-edit" method="post">
+      <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
+    {% endif %}
+
         {{ form.hidden_tag() }}
         {% for field in form if field.widget.input_type != 'hidden' %}
 
