--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "event-form-base.html" %}
 
-{% block title %}Home | Wufoo Preload{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block styles %}
   <style type="text/css">
