Add on campus locations

--- a/tinker/templates/error/404.html
+++ b/tinker/templates/error/404.html
@@ -9,7 +9,7 @@
         <div class="nav-bar right">
          <ul class="button-group">
            <li><a href="/" class="button">Home</a></li>
-           <li><a href="/add" class="button">New Event</a></li>
+           <li><a href="/add-event" class="button">New Event</a></li>
            <li><a href="/facutly-bio" class="button">Edit Bio</a></li>
            <li><a href="/wufoo" class="button">Wufoo</a></li>
 
@@ -29,7 +29,7 @@
       <h5>Go <a href="/"> home </a> or try an item below</h5>
       <ul>
        <li><a href="/" class="">Home</a></li>
-       <li><a href="/add" class="">New Event</a></li>
+       <li><a href="/add-event" class="">New Event</a></li>
        <li><a href="/facutly-bio" class="">Edit Bio</a></li>
        <li><a href="/wufoo" class="">Wufoo</a></li>
        </ul>
