Rework jinja templates
Add tinker-base.html
Remove event-form-base.html

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -1,10 +1,9 @@
-{% extends "event-form-base.html" %}
+{% extends "tinker-base.html" %}
 
 {% block title %}Home{% endblock %}
 
 {% block styles %}
   <style type="text/css">
-
   </style>
 {% endblock %}
 
