--- a/tinker/templates/event-form.html
+++ b/tinker/templates/event-form.html
@@ -1,4 +1,4 @@
-{% extends "event-form-base.html" %}
+{% extends "tinker-base.html" %}
 
 {% block title %}Event Form{% endblock %}
 
@@ -98,4 +98,154 @@
 
 {% endblock %}
 
+
+{% block scripts %}
+
+        <script src="{{ url_for('static', filename='moment.js') }}"></script>
+        <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
+
+        <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
+        <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
+        <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
+        <script type="text/javascript">
+
+         function newFieldset(id){
+                var start = 'start' + id;
+                var end = 'end' + id;
+                var all = 'allday' + id;
+                var node = $('<fieldset>').addClass('date-fieldset');
+                node.append($("<legend>").html("Date " + id));
+                node.append($("<input type='checkbox'>").attr('name', all).attr('id', all).attr('class', 'alldaycheck'));
+                node.append($("<label>").attr('for', all).html("All Day"));
+                node.append($("<label>").attr('for', start).html("Start Date"));
+                node.append($("<input type='text'>").attr('name', start).attr('id', start).addClass("datepicker"));
+                node.append($("<label>").attr('for', end).html("End Date"));
+                node.append($("<input type='text'>").attr('name', end).attr('id', end).addClass("datepicker"));
+
+                return node;
+         }
+
+         function populateFieldset(id, allday, start, end){
+            var startid = '#start' + id;
+            var endid = '#end' + id;
+            var alldayid = '#allday' + id;
+            $(startid).val(start);
+            $(endid).val(end);
+            if(allday){
+              $(alldayid).prop('checked', true);
+            }
+         }
+
+         function testOffCampusLocation(){
+            var location = $("#location")[0];
+            var val = location.options[location.selectedIndex].innerHTML;
+            if(val == "Off Campus"){
+              $("#off_location_wrap").show();
+              $("#on_campus_wrap").hide();
+              $("#other_wrap").hide();
+            }
+            else{
+              $("#off_location_wrap").hide();
+              $("#on_campus_wrap").show();
+              $("#other_wrap").show();
+            }
+          }
+
+          $( document ).ready(function() {
+            CKEDITOR.config.format_tags = 'h4;h5';
+              function createPickers() {
+                $('.datepicker').each(function (index) {
+                  var picker = new Pikaday({
+                    field: this,
+                    format: 'MMMM Do YYYY, h:mm a',
+                    showTime: true
+                  });
+                });
+              }
+
+            {% if dates %}
+              var dates = {{ dates|safe }};
+              var i = 0;
+              while (i < 200){
+
+                date = dates[i];
+                if (!date){
+                  break;
+                }
+                //Convert to correct value
+                id = i + 1;
+
+                //If this is not the first node, create it before we can populate it and insert after the last one.
+                //show the remove buton
+                if(i != 0){
+                  var last = $(".date-fieldset").last();
+                  var new_date = newFieldset(id);
+                  new_date.insertAfter(last);
+                  $("#remove_date_button").show();
+                }
+                //Now populate the fieldset
+                var allday = date['all-day'];
+                if( allday && allday.substr(-3) == "Yes" ){
+                  allday = true;
+                }
+                populateFieldset(id, allday, date['start-date'], date['end-date']);
+                //no infinite loops today
+                i++;
+
+              }
+
+            {% endif %}
+
+              $("#add_date_button").click(function(){
+                var fieldsets = $(".date-fieldset");
+                var last = fieldsets.last();
+                var old_num = last.children()[0].textContent.substr(-1);
+                var new_num = (parseInt(old_num) + 1);
+                var new_date = newFieldset(new_num);
+                new_date.insertAfter(last);
+                $("#remove_date_button").show();
+                createPickers();
+              });
+
+              $("#remove_date_button").click(function(){
+                var list = $(".date-fieldset");
+                var length = list.length;
+                //Hide remove button if there will only be one date left
+                if (length == 2){
+                  $("#remove_date_button").hide();
+                }
+                list.last().remove();
+              });
+              $("#location").change(function(){
+                testOffCampusLocation();
+              });
+
+              createPickers();
+              //Test this right away if we are editing because the callback won't fire
+              testOffCampusLocation();
+
+
+          });
+
+        </script>
+
+    {% endblock %}
+
+
+    {% macro datetime_fieldset() -%}
+      <fieldset class="date-fieldset">
+        <legend>Date 1</legend>
+
+          <input id="allday1" name="allday1" class="alldaycheck" type="checkbox" value="True"><label for="allday1">All Day</label>
+
+          <label for="start1">Start Date</label>
+            <input type="text" name="start1" id="start1" class="datepicker"/>
+
+          <label for="end1">End Date</label>
+            <input type="text" name="end1" id="end1" class="datepicker"/>
+
+      </fieldset>
+      <a href="javascript:void(0);" id="add_date_button" class="button tiny">Add Another Date</a>
+      <a href="javascript:void(0);" id="remove_date_button" style="display:none" class="button tiny alert">Remove Date</a>
+    {%- endmacro  %}
 
