--- a/tinker/templates/event-form.html
+++ b/tinker/templates/event-form.html
@@ -32,7 +32,7 @@
         {% if form.errors %}
           <div class="alert alert-error">
             <div data-alert class="alert-box alert radius">
-              {{ error }}
+                There were errors with your form.
                 <a href="#" class="close">&times;</a>
               </div>
             </div>
