Update required fields

--- a/tinker/templates/event-form.html
+++ b/tinker/templates/event-form.html
@@ -56,6 +56,7 @@
               {{ field.label.text }}
               {% if field.flags.required %} <small>required</small> {% endif %}
              </label>
+            <small>{{ field.description }}</small>
           {% endif %}
 
 
