update the forms

--- a/tinker/templates/confirm/submit-confirm.html
+++ b/tinker/templates/confirm/submit-confirm.html
@@ -2,6 +2,12 @@
 
 {% block title %}Success{% endblock %}
 
+{% block side_one %}
+        <p>
+          Your event page needs to be approved before it’s live on our website. This will happen within 2-3 business days.
+        </p>
+{% endblock %}
+
 {% block main_content %}
 
   <div class="row">
@@ -11,17 +17,13 @@
           Thanks for your submission!
         </h3>
         <p>
-          Your event page is being built and will be available for you to preview and edit in a few minutes.
-
+          Your event page is being built and will be available for you to <a href="/">preview and edit</a> on your Tinker homepage in a few minutes.
         </p>
         <p>
           Please enjoy this GIF while you’re waiting!
         </p>
         <p>
-          <img src="//awesomegifs.com/wp-content/uploads/kitten-is-scared-by-lizard.gif" />
-        </p>
-        <p>
-          Your event page needs to be approved before it’s live on our website. This will happen within 2-3 business days.
+          <img src="//cdn2.bethel.edu/gif/kitten-is-scared-by-lizard.gif" />
         </p>
 
     </div>
