--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -11,8 +11,10 @@
 
 {% block main_content %}
 
+
 <div class="row">
-  <div class="large-12 columns">
+
+  <div class="large-8 columns">
 
    {% for form in forms%}
       <div class="row">
@@ -41,6 +43,11 @@
         <hr/>
       </div>
     {% endfor %}
+
+  </div>
+  <div class="large-4 columns">
+
+    <p>Your event page needs to be approved before it’s live on our website. This will happen within 2-3 business days.</p>
 
   </div>
 </div>
