--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -51,7 +51,7 @@
               <hr />
               <div class="row">
                 <div class="large-6 columns">
-                  <p>&copy; Copyright no one at all. Go to town.</p>
+                  <p>&copy; Bethel University </p>
                 </div>
               </div>
             </div>
