--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -13,7 +13,7 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <p>Your event page needs to be approved before it’s live on our website. This will happen within 2-3 business days.</p>
+    <p>All events need to be reviewed and approved by Conference and Event Services. Your event will be reviewed in 2-3 business days.</p>
   </div>
  </div>
 <div class="row">
