--- a/tinker/templates/confirm/submit-confirm.html
+++ b/tinker/templates/confirm/submit-confirm.html
@@ -2,12 +2,6 @@
 
 {% block title %}Success{% endblock %}
 
-{% block side_one %}
-        <p>
-          Your event page needs to be approved before it’s live on our website. This will happen within 2-3 business days.
-        </p>
-{% endblock %}
-
 {% block main_content %}
 
   <div class="row">
@@ -24,6 +18,10 @@
         </p>
         <p>
           <img src="//cdn2.bethel.edu/gif/kitten-is-scared-by-lizard.gif" />
+        </p>
+
+        <p>
+          All events need to be approved by Conference and Event Services before they’re viewable on our website. This will happen within 2-3 business days.
         </p>
 
     </div>
