--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -13,7 +13,9 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <p>All events need to be reviewed and approved by Conference and Event Services. Your event will be reviewed in 2-3 business days.</p>
+    <p>All events need to be reviewed and approved by Conference and Event Services.<br/>
+      Check back in 2-3 business days for your event’s approval status. When your event has been approved, the text in the green box will say “View Event”.
+    </p>
   </div>
  </div>
 <div class="row">
@@ -37,10 +39,10 @@
           <ul class="button-group">
             {% if form.is_published %}
               <li><a href="{{ form.path }}" class="small button success">View</a></li>
+              <li><a href="/edit/event/{{ form.id }}" class="small button">Edit</a></li>
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
-            <li><a href="/edit/event/{{ form.id }}" class="small button">Edit</a></li>
             <li><a href="/delete/{{ form.id }}" class="small button alert">Delete</a></li>
            </ul>
         </div>
