--- a/tinker/templates/confirm/submit-confirm.html
+++ b/tinker/templates/confirm/submit-confirm.html
@@ -11,7 +11,7 @@
           Thanks for your submission!
         </h3>
         <p>
-          Your event page is being built and will be available for you to <a href="/">preview and edit</a> on your Tinker homepage in a few minutes.
+          Your event page is being built and will appear on your <a href="/">Tinker homepage</a> in a few minutes.
         </p>
         <p>
           Please enjoy this GIF while you’re waiting!
