--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -13,7 +13,7 @@
          {% if 'FACULTY' in session['roles'] %}
           <li><a href="/facutly-bio" class="button">Edit Bio</a></li>
          {% endif %}
-         <li><a href="/wufoo" class="button">Wufoo</a></li>
+{#         <li><a href="/wufoo" class="button">Wufoo</a></li>#}
 
         </ul>
       </div>
