hide bio for now

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -10,9 +10,9 @@
        <ul class="button-group">
          <li><a href="/" class="button">Home</a></li>
          <li><a href="/add-event" class="button">New Event</a></li>
-         {% if 'FACULTY' in session['roles'] %}
-          <li><a href="/facutly-bio" class="button">Edit Bio</a></li>
-         {% endif %}
+{#         {% if 'FACULTY' in session['roles'] %}#}
+{#          <li><a href="/facutly-bio" class="button">Edit Bio</a></li>#}
+{#         {% endif %}#}
 {#         <li><a href="/wufoo" class="button">Wufoo</a></li>#}
 
         </ul>
