--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -7,7 +7,7 @@
   </style>
 {% endblock %}
 
-{% block page_title %}Tinker{% endblock %}
+{% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
 <div class="row">
