Updated Homepage and Confirmation messages.

--- a/tinker/templates/confirm/submit-confirm.html
+++ b/tinker/templates/confirm/submit-confirm.html
@@ -21,7 +21,7 @@
         </p>
 
         <p>
-          All events need to be approved by Conference and Event Services before they’re viewable on our website. This will happen within 2-3 business days.
+          You'll receive an email when your event has been approved by Conference and Event Services. Your event will then be viewable on our website.
         </p>
 
     </div>
