--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -13,8 +13,8 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <p>All events need to be reviewed and approved by Conference and Event Services.<br/>
-      Check back in 2-3 business days for your event’s approval status. When your event has been approved, the text in the green box will say “View Event”.
+    <p>All events need to be reviewed and approved by Conference and Event Services. This will happen between 2-3 business days.<br/>
+      When your event has been approved, you'll receive an email and the text in the green box will say "View Event".
     </p>
   </div>
  </div>
